deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pearl-bo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pearl-bo
  template:
    metadata:
      labels:
        app: pearl-bo
    spec:
      containers:
        - name: pearl-bo
          image: inseefr/pearl-jam-back-office:latest
