service.yml
apiVersion: v1
kind: Service
metadata:
  name: pearljam-bo
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: pearljam-bo
