ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pearl-bo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - api-collecte-enqueteurs.dev.insee.io
  rules:
    - host: api-collecte-enqueteurs.dev.insee.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pearl-bo
                port:
                  number: 8080
